LOVE MY DEAR COUSIN. MUST MARRY HIM AS SOON AS POSSIBLE

--- a/readme.org
+++ b/readme.org
@@ -732,3 +732,4 @@ public partial class StartProcessConfig {
 - 它有几个模式：好像要有一个一一对应，就是一个服务器，一个客户端，大致的意思是说，同在游戏引擎里，不能一次弄出两三个客户端之类的吧（就是要么clientserver模式，要么server + client, 别弄了个servier,结果又构建了个clientserver）这样程序就可以正常运行了
 - 感觉那么追日志看得好艰难，跟不上.就先把游戏中需要打包构建的几个主要的程序自己先理解一遍，不懂的上网查，再跟着日志看。现在看感觉仍然不知道在哪里
 * HotfixView程序域: 先看这部分,这里面的大部分的源码都还比较简单
+- 应快把样例工程中的源码爬一遍
