LOVE MY DEAR COUSIN. MUST MARRY HIM AS SOON AS POSSIBLE

--- a/readme.org
+++ b/readme.org
@@ -1274,3 +1274,7 @@ public class SerializationDictionary<TKey, TValue> : ISerializationCallbackRecei
 }
 #+END_SRC
 - *泛型实在太有魅力了，我等懒人必会之* 爱表哥，爱生活！！！一定会嫁给偶亲爱的表哥！！！
+- 原本有了好的电脑，用一个好的系统开发是件多么舒服的事，但现在看来，自己高兴得太早了，一堆因为大众大家的开发配置环境不一样造成的各种bug需要自己这个弱弱去一一探索解决.比如原本在WINDOWS系统上运行得好好的斗地主游戏，ET示例等，在新的系统下都运行不起来，需要自己去解决过程中可能会遇到的各种问题
+- 原本本来如果只是极简单的问题也就没有什么，可是偏偏自己看的框架等标准要求都还比较高
+* 再理解消化一下这个大的框架
+- 狠久没有静下心来好读一下理解一下源码了.今天上午再好好读一读查查资料，把它消化掉
